force-app/main/default/objects/SalesTeam__c/SalesTeam__c.object-meta.xml
<CustomObject>
    <label>Equipe de Vendas</label>
    <nameField>
        <label>Equipe de Vendas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipes de Vendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>