force-app/main/default/objects/SalesTeam__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Endereço</label>
    <type>TextArea</type>
</CustomField>