force-app/main/default/objects/SalesTeam__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <label>CNPJ</label>
    <type>TextArea</type>
</CustomField>