force-app/main/default/objects/SalesTeam__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Local</label>
    <length>255</length>
    <type>Text</type>
</CustomField>