force-app/main/default/objects/SalesTeam__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Inscrição Estadual</label>
    <type>TextArea</type>
</CustomField>