force-app/main/default/objects/SalesTeam__c/fields/ShowBarterPrices__c.field-meta.xml
<CustomField>
    <fullName>ShowBarterPrices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apresenta Preços - Barter</label>
    <type>Checkbox</type>
</CustomField>