force-app/main/default/objects/SalesTeam__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Estado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>