force-app/main/default/objects/SalesTeam__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Nome Filial</label>
    <length>200</length>
    <type>Text</type>
</CustomField>