force-app/main/default/objects/SalesTeam__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>Código postal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>